--- a/.env.production
+++ b/.env.production
@@ -11,3 +11,4 @@ CONVERSATION_API_BASE=http://116.118.50.179:4002/api
 CORS_ORIGINS=http://116.118.50.179:4002
 POLL_INTERVAL_MS=3000
 MSG_POLL_MS=2000
+LOG_LEVEL=debug
