--- a/.env.production
+++ b/.env.production
@@ -12,3 +12,4 @@ CORS_ORIGINS=https://crm.blingkim.com
 POLL_INTERVAL_MS=3000
 MSG_POLL_MS=2000
 LOG_LEVEL=debug
+MongoDB_URI=mongodb+srv://thanhnth_db_user:ObKBLyqGNO6hJgvc@cluster0.gydxcdj.mongodb.net/data_dev
