--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "node-fetch": "^3.3.2",
+    "puppeteer-core": "^24.37.1",
     "socket.io": "^4.7.5",
     "zca-js": "^2.0.4"
   },
